fix showing image & prevnext on small screens

--- a/scss/ctk.scss
+++ b/scss/ctk.scss
@@ -128,7 +128,11 @@ body {
     }
 
     .image {
-      margin-right: 1rem;
+      // margin-right: 1rem;
+
+      img {
+        @extend .column;
+      }
     }
 
     ul.links {
